第四次更新地址

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
 							<li><a href="/">Home</a></li>
 							<li><a href="https://azpay.cns">Moe</a>
 					        <li><a href="https://azpay.cn">Download</a></li>
-							<li><a href="https://azpay.cn" target="_blank" class="button special">Blog</a></li>
+							<li><a href="http://8.138.90.255/" target="_blank" class="button special">Blog</a></li>
 						</ul>
 					</nav>
 				</header>
